--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.5",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^24.0.0",
+    "postcss": "^8.4.36",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.1.6",
     "vite-plugin-vue-devtools": "^7.0.18",
     "vitest": "^1.4.0"
