--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@vee-validate/rules": "^4.12.6",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
